--- a/src/assets/styles/style.styl
+++ b/src/assets/styles/style.styl
@@ -1,2 +1,36 @@
-.foo
-	color #606
+/* Colors */
+highlight-color = #ff0066
+secondary-color = #212121
+bg-color = #333
+
+/* header */
+.header
+	width 100%
+	background-color highlight-color
+
+.container
+	border 1px dashed
+	width 100%
+	max-width 800px
+	margin 0 auto
+
+.menu
+	border 1px dashed
+	display flex
+	align-items center
+
+.menu-itens
+	margin-top 0
+	margin-bottom 0
+	padding-left 0
+	display inline-block
+
+.menu-item
+	list-style none
+	display inline-block
+
+.menu-link
+	color #fff
+	text-decoration none
+	display inline-block
+	padding 10px
