--- a/src/partials/header.pug
+++ b/src/partials/header.pug
@@ -1,1 +1,8 @@
-header header
+header.header
+	div.container
+		nav.menu
+			ul.menu-itens
+				li.menu-item 
+					a.menu-link(href="#") Home
+				li.menu-item 
+					a.menu-link(href="#") Perfil
