Criando header responsivo com flexbox parte 2

--- a/src/partials/header.pug
+++ b/src/partials/header.pug
@@ -2,7 +2,10 @@ header.header
 	div.container
 		nav.menu
 			ul.menu-itens
-				li.menu-item 
+				li.menu-item
 					a.menu-link(href="#") Home
-				li.menu-item 
+				li.menu-item
 					a.menu-link(href="#") Perfil
+		div.profile
+			img.profile-img(src="assets/img/vitebo-perfil-mini.jpg" alt="André Vitebo Perfil")
+			span.profile-text André Vitebo
