--- a/src/assets/styles/style.styl
+++ b/src/assets/styles/style.styl
@@ -3,7 +3,11 @@ highlight-color = #ff0066
 secondary-color = #212121
 bg-color = #333
 
-/* header */
+*
+	box-sizing: border-box
+
+/* header
+======================================== */
 .header
 	width 100%
 	background-color highlight-color
@@ -13,11 +17,21 @@ bg-color = #333
 	width 100%
 	max-width 800px
 	margin 0 auto
+	display flex
+	flex-wrap wrap
 
+/* menu
+==================== */
 .menu
 	border 1px dashed
 	display flex
 	align-items center
+
+	@media screen and (max-width: 400px)
+		width 100%
+		justify-content center
+		order 2
+		padding 10px 0
 
 .menu-itens
 	margin-top 0
@@ -34,3 +48,25 @@ bg-color = #333
 	text-decoration none
 	display inline-block
 	padding 10px
+
+/* profile
+==================== */
+.profile
+	border 1px dashed
+	margin-left auto
+
+	@media screen and (max-width: 400px)
+		width 100%
+		text-align center
+		order 1
+		padding 10px 0
+
+.profile-img
+	vertical-align: middle
+	border-radius 50%
+	margin 5px
+
+.profile-text
+	margin 5px
+	display inline-block
+	color #fff
