--- a/src/assets/styles/style.styl
+++ b/src/assets/styles/style.styl
@@ -7,6 +7,17 @@ bg-color = #333
 *
 	box-sizing: border-box
 
+body,
+html
+	height 100%
+
+body
+	display flex
+	flex-direction column
+
+.main
+	flex 1
+
 /* Dev mode */
 border()
 	border 1px dashed
