--- a/src/layouts/default.pug
+++ b/src/layouts/default.pug
@@ -40,9 +40,9 @@ html(lang="en")
 	body
 		include ./../partials/header.pug
 
-		main
+		main.main
 			block content
-				
+
 		include ./../partials/footer.pug
 
 		script(type="text/javascript" src="assets/scripts/script.js" async)
