--- a/src/index.pug
+++ b/src/index.pug
@@ -1,4 +1,4 @@
 extends ./layouts/default.pug
 
 block content
-	div Ola Mundo
+	img(srcset="assets/img/vitebo-perfil-1x.jpg 1x, assets/img/vitebo-perfil-2x.jpg 2x" src="assets/img/vitebo-perfil-1x.jpg")
