--- a/src/partials/header.pug
+++ b/src/partials/header.pug
@@ -7,5 +7,5 @@ header.header
 				li.menu-item
 					a.menu-link(href="#") Perfil
 		div.profile
-			img.profile-img(src="assets/img/vitebo-perfil-mini.jpg" alt="André Vitebo Perfil")
+			img.profile-img(srcset="assets/img/vitebo-perfil-mini-1x.jpg 1x, assets/img/vitebo-perfil-mini-2x.jpg 2x" src="assets/img/vitebo-perfil-mini-1x.jpg" alt="André Vitebo Perfil")
 			span.profile-text André Vitebo
