--- a/src/assets/styles/style.styl
+++ b/src/assets/styles/style.styl
@@ -18,6 +18,11 @@ body
 .main
 	flex 1
 
+.container-centered
+	display flex
+	justify-content center
+	align-items center
+
 /* Dev mode */
 border()
 	border 1px dashed
