--- a/src/index.pug
+++ b/src/index.pug
@@ -1,4 +1,5 @@
 extends ./layouts/default.pug
 
 block content
-	img(srcset="assets/img/vitebo-perfil-1x.jpg 1x, assets/img/vitebo-perfil-2x.jpg 2x" src="assets/img/vitebo-perfil-1x.jpg")
+	main.main.container-centered
+		img(srcset="assets/img/vitebo-perfil-1x.jpg 1x, assets/img/vitebo-perfil-2x.jpg 2x" src="assets/img/vitebo-perfil-1x.jpg")
