--- a/src/assets/styles/style.styl
+++ b/src/assets/styles/style.styl
@@ -11,21 +11,43 @@ body,
 html
 	height 100%
 
+/* Dev mode */
+border()
+	border 1px dashed
+
 body
 	display flex
 	flex-direction column
+	background-color bg-color
+	font-weight 300
 
 .main
 	flex 1
+
+.profile-container
+	width 100%
+	max-width 500px
+	text-align center
+	border()
+
+.profile-img
+	border-radius 50%
+	width: 100%
+	max-width 200px
+
+.heading-lv1
+	color #fff
+	font-family 'Lobster', 'cursive'
+	font-size 42px
+	margin 5px
+
+.paragraph
+	color: #fff
 
 .container-centered
 	display flex
 	justify-content center
 	align-items center
-
-/* Dev mode */
-border()
-	border 1px dashed
 
 .container
 	border()
