--- a/src/partials/header.pug
+++ b/src/partials/header.pug
@@ -3,9 +3,9 @@ header.header
 		nav.menu
 			ul.menu-itens
 				li.menu-item
-					a.menu-link(href="#") Home
-				li.menu-item
 					a.menu-link(href="#") Perfil
+				li.menu-item
+					a.menu-link(href="#") Projects
 		div.profile
 			img.profile-img(srcset="assets/img/vitebo-perfil-mini-1x.jpg 1x, assets/img/vitebo-perfil-mini-2x.jpg 2x" src="assets/img/vitebo-perfil-mini-1x.jpg" alt="André Vitebo Perfil")
 			span.profile-text André Vitebo
