Corrigindo algumas nomlecaturas de classe com BEM

--- a/src/assets/styles/style.styl
+++ b/src/assets/styles/style.styl
@@ -24,13 +24,15 @@ body
 .main
 	flex 1
 
-.profile-container
+/* Profile
+==================== */
+.profile
 	width 100%
 	max-width 500px
 	text-align center
 	border()
 
-.profile-img
+.profile__profile-img
 	border-radius 50%
 	width: 100%
 	max-width 200px
