--- a/src/assets/styles/partials/header.styl
+++ b/src/assets/styles/partials/header.styl
@@ -1,8 +1,10 @@
+/* Header container
+======================================== */
 .header
 	width 100%
 	background-color highlight-color
 
-/* menu
+/* Menu
 ==================== */
 .menu
 	border()
@@ -31,9 +33,9 @@
 	display inline-block
 	padding 10px
 
-/* profile
+/* Profile
 ==================== */
-.profile
+.profile-header
 	border()
 	margin-left auto
 
@@ -43,7 +45,7 @@
 		order 1
 		padding 10px 0
 
-.profile-img
+.profile-header__profile-img
 	vertical-align: middle
 	border-radius 50%
 	margin 5px
