--- a/src/assets/styles/modules/header.styl
+++ b/src/assets/styles/modules/header.styl
@@ -45,7 +45,7 @@
 		order 1
 		padding 10px 0
 
-.profile-header__profile-img
+.profile-header-img
 	vertical-align: middle
 	border-radius 50%
 	margin 5px
