--- a/src/index.pug
+++ b/src/index.pug
@@ -3,6 +3,6 @@ extends ./layouts/default.pug
 block content
 	main.main.container-centered
 		div.profile
-			img.profile__profile-img(srcset="assets/img/vitebo-perfil-1x.jpg 1x, assets/img/vitebo-perfil-2x.jpg 2x" src="assets/img/vitebo-perfil-1x.jpg" alt="André Vitebo Perfil")
+			img.profile-img(srcset="assets/img/vitebo-perfil-1x.jpg 1x, assets/img/vitebo-perfil-2x.jpg 2x" src="assets/img/vitebo-perfil-1x.jpg" alt="André Vitebo Perfil")
 			h1.heading-lv1 André Vitebo
 			p.paragraph  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore necessitatibus facilis inventore neque culpa error, adipisci praesentium nobis laboriosam aspernatur tempore eum ipsam ex optio dicta, reiciendis dolor dolorem minima.
