--- a/src/assets/styles/style.styl
+++ b/src/assets/styles/style.styl
@@ -1,5 +1,6 @@
 @import 'modules/theme.styl'
 @import 'modules/global.styl'
+@import 'modules/icons.styl'
 @import 'modules/profile.styl'
 @import 'modules/projects.styl'
 @import 'modules/texts.styl'
