--- a/src/assets/styles/modules/theme.styl
+++ b/src/assets/styles/modules/theme.styl
@@ -1,4 +1,5 @@
 /* Colors */
-highlight-color = #ff0066
-secondary-color = #212121
-bg-color = #333
+$highlight-color = #ff0066
+$secondary-color = #212121
+$light-color = #ffffff
+$bg-color = #333
