--- a/src/projects.pug
+++ b/src/projects.pug
@@ -4,7 +4,7 @@ block content
   main.main.container
     div.projects
       section.projects-list
-        h1.heading-lv1 Projects
+        h1.heading-lv1.heading-lv1-projects Projects
 
         for project in projects
           article.project
