--- a/src/assets/styles/modules/global.styl
+++ b/src/assets/styles/modules/global.styl
@@ -1,10 +1,10 @@
 /* Dev mode */
 border()
-  border: 1px dashed #111
+  border 1px dashed $secondary-color
 
 /* Box model */
-*
-  box-sizing: border-box
+* // @stylint ignore
+  box-sizing border-box
 
 body,
 html
@@ -13,7 +13,7 @@ html
 body
   display flex
   flex-direction column
-  background-color bg-color
+  background-color $bg-color
   font-weight 300
 
 .main
