--- a/src/assets/styles/modules/header.styl
+++ b/src/assets/styles/modules/header.styl
@@ -2,7 +2,8 @@
 ======================================== */
 .header
   width 100%
-  background-color highlight-color
+  background-color $highlight-color
+
 
 /* Menu
 ==================== */
@@ -12,29 +13,33 @@
   align-items center
 
   @media screen and (max-width: 400px)
-    width 100%
-    justify-content center
     order 2
+    justify-content center
     padding 10px 0
+    width 100%
+
 
 .menu-itens
+  display inline-block
   margin-top 0
   margin-bottom 0
   padding-left 0
-  display inline-block
+
 
 .menu-item
-  list-style none
   display inline-block
+  list-style none
+
 
 .menu-link
-  color #fff
-  text-decoration none
   display inline-block
   padding 10px
+  color $light-color
+  text-decoration none
 
   &:hover
-    opacity: .8
+    opacity .8
+
 
 /* Profile
 ==================== */
@@ -42,18 +47,20 @@
   border()
   margin-left auto
 
-  @media screen and (max-width: 400px)
-    width 100%
-    text-align center
+  @media screen and (max-width 400px)
     order 1
     padding 10px 0
+    width 100%
+    text-align center
+
 
 .profile-header-img
-  vertical-align: middle
-  border-radius 50%
   margin 5px
+  border-radius 50%
+  vertical-align middle
+
 
 .profile-text
-  margin 5px
   display inline-block
-  color #fff
+  margin 5px
+  color $light-color
