--- a/src/assets/styles/modules/texts.styl
+++ b/src/assets/styles/modules/texts.styl
@@ -1,9 +1,9 @@
 .heading-lv1
-  color #fff
-  font-family 'Lobster', 'cursive'
-  font-size 42px
   margin 5px
   width 100%
+  color $light-color
+  font-size 42px
+  font-family 'Lobster', 'cursive'
 
 .paragraph
-  color: #fff
+  color $light-color
