--- a/src/layouts/default.pug
+++ b/src/layouts/default.pug
@@ -37,7 +37,7 @@ html(lang="en")
     //- ===========================================
     link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|RobotoRoboto:300,400")
 
-  body
+  body(data-senna)
     include ./../partials/header.pug
 
     block content
@@ -45,3 +45,4 @@ html(lang="en")
     include ./../partials/footer.pug
 
     script(type="text/javascript" src="assets/scripts/script.js" async)
+    script(type="text/javascript" src="assets/scripts/senna-min.js")
