Corrigindo bug nos estilos causados pela surface

--- a/src/assets/styles/modules/container.styl
+++ b/src/assets/styles/modules/container.styl
@@ -1,7 +1,16 @@
+.main
+  flex 1
+
+// Classe adicionada autimaticamente pelo SennaJS
+// É nescessario a estilização personalizada para não quebrar o sticky footer
+.flipped
+  height 100%
+
 .container-centered
   display flex
   justify-content center
   align-items center
+  height 100%
 
 .container
   border()
