--- a/src/index.pug
+++ b/src/index.pug
@@ -1,7 +1,7 @@
 extends ./layouts/default.pug
 
 block content
-  main(data-senna-surface).main.container-centered#main
+  div.container-centered
     div.profile
       img.profile-img(srcset="assets/img/vitebo-perfil-1x.jpg 1x, assets/img/vitebo-perfil-2x.jpg 2x" src="assets/img/vitebo-perfil-1x.jpg" alt="André Vitebo Perfil")
       h1.heading-lv1 André Vitebo
