--- a/src/layouts/default.pug
+++ b/src/layouts/default.pug
@@ -40,9 +40,12 @@ html(lang="en")
   body(data-senna)
     include ./../partials/header.pug
 
-    block content
+    main(data-senna-surface).main#main
+      block content
 
     include ./../partials/footer.pug
 
     script(type="text/javascript" src="assets/scripts/script.js" async)
+    //- script(type="text/javascript" src="assets/scripts/senna-debug.js")
     script(type="text/javascript" src="assets/scripts/senna-min.js")
+
