--- a/src/projects.pug
+++ b/src/projects.pug
@@ -1,7 +1,7 @@
 extends ./layouts/default.pug
 
 block content
-  main(data-senna-surface).main.container#main
+  div.container
     div.projects
       section.projects-list
         h1.heading-lv1.heading-lv1-projects Projects
