--- a/src/assets/styles/modules/global.styl
+++ b/src/assets/styles/modules/global.styl
@@ -1,6 +1,6 @@
 /* Dev mode */
 border()
-  border 1px dashed $secondary-color
+  border none dashed $secondary-color
 
 /* Box model */
 * // @stylint ignore
